--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,14 @@
     z-index: 9999;
   }
   
+  footer a {
+    color: #fff; /* Link color */
+    text-decoration: none; /* Remove underline from the link */
+}
+
+footer a:hover {
+    text-decoration: underline; /* Underline the link on hover */
+}
   /* Form Contact */
   form {
     display: flex;
